trustfall_derive/tests/ui/derive_struct.stderr
error: only enums can derive TrustfallEnumVertex
 --> tests/ui/derive_struct.rs:4:1
  |
4 | / struct Vertex {
5 | |     content: i64,
6 | | }
  | |_^

error: only enums can derive Typename
  --> tests/ui/derive_struct.rs:9:1
   |
9  | / struct OtherVertex {
10 | |     content: i64,
11 | | }
   | |_^
